# libff

./: .gitmodules  msvc_hack.h
depends/: CMakeLists.txt
libff/: CMakeLists.txt
libff/algebra/curves/: curve_utils.tcc
libff/algebra/curves/alt_bn128/: alt_bn128_g1.cpp  alt_bn128_g1.hpp  alt_bn128_g2.cpp  alt_bn128_g2.hpp  alt_bn128_init.cpp
libff/algebra/curves/bn128/: bn128_g1.cpp  bn128_g1.hpp  bn128_g2.cpp  bn128_g2.hpp  bn128_init.cpp  bn_utils.tcc
libff/algebra/curves/edwards/: edwards_g1.cpp  edwards_g1.hpp  edwards_g2.cpp  edwards_g2.hpp  edwards_init.cpp  edwards_pairing.cpp
libff/algebra/curves/mcl_bn128/: mcl_bn128_g1.cpp  mcl_bn128_g1.hpp  mcl_bn128_g2.cpp  mcl_bn128_g2.hpp  mcl_bn128_init.cpp
libff/algebra/curves/mnt/mnt4/: mnt4_g1.cpp  mnt4_g1.hpp  mnt4_g2.cpp  mnt4_g2.hpp  mnt4_init.cpp  mnt4_pairing.cpp
libff/algebra/curves/mnt/mnt6/: mnt6_g1.cpp  mnt6_g1.hpp  mnt6_g2.cpp  mnt6_g2.hpp  mnt6_init.cpp  mnt6_pairing.cpp
libff/algebra/fields/: bigint.hpp  bigint.tcc  field_utils.hpp  field_utils.tcc  fp.hpp  fp.tcc  fp4.tcc  fp6_2over3.tcc
libff/algebra/scalar_multiplication/: multiexp.tcc  multiexp_profile.cpp  wnaf.tcc
libff/common/: double.cpp  double.hpp  profiling.cpp  profiling.hpp  serialization.tcc
